<resources>
    <string name="app_name">TravelApp</string>

    <!-- bottom_navi_menu -->
    <string name="menu_title_home">Home</string>
    <string name="menu_title_travel_plan">Travel Plan</string>
    <!-- bottom_navi_menu -->

    <!-- activity_main -->
    <string name="main_activity_title">Travel Plan And History</string>
    <!-- activity_main -->

    <!-- activity_add_plan -->
    <string name="add_plan_activity_title">여행계획 추가하기</string>
    <string name="add_plan_tv_title">이번 여행의 제목은?</string>
    <string name="add_plan_et_title_hint">ex)제주도 한달살기!</string>
    <string name="add_plan_tv_start_date_title">여행 시작!</string>
    <string name="add_plan_tv_start_date">ex)2022/06/30</string>
    <string name="add_plan_tv_end_date_title">여행 끝!</string>
    <string name="add_plan_tv_end_date">ex)2022/07/04</string>
    <string name="btn_add_travel_plan">일정 추가하기</string>
    <!-- activity_add_plan -->

    <!-- item_travel_plan -->
    <string name="item_plan_title">이번 여행의 제목</string>
    <string name="item_plan_start_date">시작날짜</string>
    <string name="item_plan_end_date">종료날짜</string>
    <!-- item_travel_plan -->
</resources>