<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addPlan.AddPlanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ln_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/lineView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_top_bar_arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plan_activity_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view_line_color"
        app:layout_constraintBottom_toTopOf="@+id/cl_plan_title_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_top_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plan_title_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView1">

        <TextView
            android:id="@+id/plan_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_plan_tv_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/plan_et_title"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:hint="@string/add_plan_et_title_hint"
            android:privateImeOptions="defaultInputmode=korean"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_plan_title_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plan_start_date_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView2">

        <TextView
            android:id="@+id/plan_tv_start_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_plan_tv_start_date_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/plan_tv_start_date"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:hint="@string/add_plan_tv_start_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/plan_iv_start_dataPicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plan_tv_start_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineView3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_plan_start_date_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plan_end_date_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView3">

        <TextView
            android:id="@+id/plan_tv_end_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_plan_tv_end_date_title"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/plan_tv_end_date"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:hint="@string/add_plan_tv_end_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/plan_iv_end_dataPicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plan_tv_end_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineView4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_plan_end_date_layout" />

    <Button
        android:id="@+id/btn_add_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_travel_plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>